minor fixes in data fetcher service and swagger docs
