# media-service/docs/swagger.json
@@ -179,8 +179,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "202": {
+                        "description": "Accepted",
                         "schema": {
                             "$ref": "#/definitions/media_service.PutResponse"
                         }
